--- a/src/index.html
+++ b/src/index.html
@@ -22,15 +22,15 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="touch-icon-iphone-retina.png">
 	<link rel="apple-touch-icon" sizes="167x167" href="touch-icon-ipad-retina.png">
 	<!-- Vendor Styles including: Bootstrap, Font Icons, Plugins, etc.-->
-	<link rel="stylesheet" media="screen" href="/assets/css/vendor.min.css">
+	<link rel="stylesheet" media="screen" href="assets/css/vendor.min.css">
 	<!-- Main Template Styles-->
-	<link id="mainStyles" rel="stylesheet" media="screen" href="/assets/css/styles.min.css">
+	<link id="mainStyles" rel="stylesheet" media="screen" href="assets/css/styles.min.css">
 	<!-- Customizer Styles-->
 
 	<!-- Google Tag Manager-->
 
 	<!-- Modernizr-->
-	<script src="/assets/js/modernizr.min.js"></script>
+	<script src="assets/js/modernizr.min.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
