--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ng5</title>
+  <title>Finabot</title>
   <base href="/">
 
 	<meta charset="utf-8">
-	<title>Unishop | Universal E-Commerce Template
+	<title>Finabot | Your financial advisor
 	</title>
 	<!-- SEO Meta Tags-->
 	<meta name="description" content="Unishop - Universal E-Commerce Template">
